Closed Bug 1426440 Opened 7 years ago Closed 7 years ago

JS module test instantiation-error-8.html fails

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

No description provided.
Make processing of non-parser-generated inline module scripts work the same way as classic scripts of that type. Previously we treated these scripts like their parser-generated counterparts. This failed because mDocumentParsingDone ends up set to false again by the time we call ScriptLoader::ProcessPendingRequests() to process the loaded module and it doesn't process it.
Attachment #8938067 - Flags: review?(bugs)
Comment on attachment 8938067 [details] [diff] [review] bug1426440-instantiation-error-8 a tad tricky to review. Some comments would have been nice ;)
Attachment #8938067 - Flags: review?(bugs) → review+
Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/44b4577ed2c3 Fix processing of non-parser-generated module scripts r=smaug
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: