Bug 1426440 - Fix processing of non-parser-generated module scripts r=smaug